desco/desco-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desco-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: desco
  template:
    metadata:
      labels:
        app: desco
    spec:
      containers:
        - name: desco
          image: nazmul4532brainstation/desco-service:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: desco-service
spec:
  selector:
    app: desco
  ports:
    - port: 80
      targetPort: 3000
