desco/desco-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: desco-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: desco.biller.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: desco-service
                port:
                  number: 80
